# emailx-rs

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
